# PyCP

./: .gitignore  README.md  install.sh  pycp  pycp-deb.deb  pyproject.toml
src/pycp/: pycp.py
tests/: test_copy_directory_with_progress.py  test_copy_file_with_progress.py
